Chore: Improve translations, UI consistency, and authentication flows 🔄 Translations - Renamed DontHaveAnAccount → DonotHaveAnAccount in AR/EN JSON files. - Updated translation method name for consistency. 🚀 Core Improvements - Standardized AppRoutes, added SignUpView & ForgetPasswordView. - Applied Inter font to app bar theme. - Improved uildAppBar:   - Added isExistBackButton for optional back button.   - Allowed title color customization.   - Used NavigationManager.goBack() for consistency. 🗑 Cleanup - Removed unused login data sources, repository, and cubit files. - Deleted redundant widget (dont_have_an_account_row_widget.dart). ✨ UI & Navigation Updates - Renamed authentication components for clarity (LoginBody → LoginForm, etc.). - Standardized padding and spacing across forms. - Improved ForgetPasswordView & SignUpView:   - Replaced default AppBar with uildAppBar.   - Used localized text for headers and buttons.   - Enhanced layout with structured padding & Row spacing. - Updated account-related widgets:   - Replaced RichText with Row + TextButton for better readability.   - Used NavigationManager.replace(AppRoutes.loginRoute). 🌍 Localization - Replaced hardcoded strings with context-based translations across views.
This refactor improves maintainability, UI consistency, and localization.

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -10,7 +10,7 @@
   "PasswordNotMatched": "كلمة المرور غير متطابقة",
   "RememberMe": "تذكرني",
   "ForgotPassword": "نسيت كلمة المرور",
-  "DontHaveAnAccount": "ليس لديك حساب؟",
+  "DonotHaveAnAccount": "ليس لديك حساب؟",
   "AlreadyHaveAnAccount": "هل لديك حساب بالفعل؟",
   "UserName": "اسم المستخدم",
   "EnterYourUserName": "أدخل اسم المستخدم",
