--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -10,7 +10,7 @@
   "PasswordNotMatched": "Password not matched",
   "RememberMe": "Remember me",
   "ForgotPassword": "Forgot password",
-  "DontHaveAnAccount": "Don't have an account?",
+  "DonotHaveAnAccount": "Don't have an account?",
   "AlreadyHaveAnAccount": "Already have an account?",
   "UserName": "User name",
   "EnterYourUserName": "Enter your user name",
