feat: implement forget password functionality with API integration and clean architecture

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -59,5 +59,14 @@
   "YourScore": "نقاطك",
   "Profile": "الملف الشخصي",
   "Result": "النتيجة",
-  "Explore": "استكشف"
+  "Explore": "استكشف",
+  "Error": "خطأ",
+  "Ok": "موافق",
+  "Retry": "اعادة المحاولة",
+  "emailCan'tBeEmpty": "البريد الإلكتروني لا يمكن ان يكون فارغ.",
+  "enterAValidEmail": "البريد الإلكتروني غير صالح",
+  "loading": "جاري التحميل...",
+  "otpSentToYourEmail": "تم ارسال الكود الى بريدك الالكتروني",
+  "invalidCredentials": "البريد الإلكتروني او كلمة المرور غير صحيحة",
+  "emailNotValid": "البريد الإلكتروني غير صحيح"
 }
